--- a/package.json
+++ b/package.json
@@ -4,6 +4,28 @@
     "@emotion/styled": "^11.11.5",
     "@google/generative-ai": "^0.14.1",
     "@mui/material": "^5.16.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
+  },
+  "name": "biblios",
+  "description": "Welcome to Biblios! Our online bookstore offers a vast selection of books across various genres, catering to readers of all ages and interests. Whether you're looking for the latest bestsellers, classic literature, or children's books, Biblios has something for everyone.",
+  "version": "1.0.0",
+  "main": "ai.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.6.0",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
