--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,14 +20,16 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-    "babel": {
-      "presets": ["react-app"],
-      "plugins": [
-        "@babel/plugin-proposal-private-methods",
-        "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-private-property-in-object"
-      ]
-    },  
+  "babel": {
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-private-methods",
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-private-property-in-object"
+    ]
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -46,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
