--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,29 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chec/commerce.js": "^2.3.0-beta1",
-    "@fortawesome/fontawesome-free": "^6.5.2",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^5.0.1",
-    "gh-pages": "^3.2.0",
-    "mdbreact": "^4.6.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.6.1",
-    "react-dom": "^16.13.1",
-    "react-hook-form": "^6.11.5",
-    "react-responsive-carousel": "^3.2.18",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
-    "react-stripe-elements": "^6.1.2",
-    "semantic-ui-react": "^2.0.1"
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
