--- a/Book-Access/package.json
+++ b/Book-Access/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.0.1",
     "gh-pages": "^3.2.0",
     "mdbreact": "^4.6.1",
+    "mongoose": "^8.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.13.1",
