--- a/Book-Access/package.json
+++ b/Book-Access/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.0.1",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "gh-pages": "^3.2.0",
     "mdbreact": "^4.6.1",
     "mongoose": "^8.5.1",
