--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0"
+    "express-async-handler": "^1.2.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.3.2"
   }
 }
